--- a/main.css
+++ b/main.css
@@ -1,3 +1,65 @@
 body {
 	background-color: orange;
 }
+
+#playground {
+	border: 5px dotted black;
+	color: purple;
+}
+
+.child {
+	background-color: slategray;
+	color: blue;
+}
+
+li {
+	border-bottom: 3px solid tomato;
+}
+
+#playground > h1 {
+	color: blue;
+}
+
+span ~ p {
+	background-color: green;
+}
+
+h1 {
+	font-family: 'Kumar One';
+	text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	color: purple;
+}
+
+#playground {
+	display: none;
+}
+
+#accomplishments > h2 {
+	color: slategray;
+}
+
+.accomplishment {
+	width: 40%;
+}
+
+.accomplishment > img {
+	width: 10%;
+}
+
+.accomplishment a {
+	text-decoration: none;
+	color: black;
+	font-weight: bold;
+}
+
+.accomplishment:nth-of-type(1) {
+	background-color: lightblue;
+}
+
+.accomplishment:nth-of-type(2) {
+	background-color: lavender;
+}
+
