--- a/main.css
+++ b/main.css
@@ -37,12 +37,19 @@ h1, h2, h3, h4, h5, h6 {
 	display: none;
 }
 
+#accomplishments {
+	/*margin: 10px auto;*/
+}
+
 #accomplishments > h2 {
 	color: slategray;
+	text-align: center;
 }
 
 .accomplishment {
+	margin: 0 auto;
 	width: 40%;
+	padding: 5px;
 }
 
 .accomplishment > img {
@@ -57,9 +64,33 @@ h1, h2, h3, h4, h5, h6 {
 
 .accomplishment:nth-of-type(1) {
 	background-color: lightblue;
+	margin-bottom: 10px;
 }
 
 .accomplishment:nth-of-type(2) {
 	background-color: lavender;
 }
 
+#images {
+	display: flex;
+	justify-content: space-around;
+	margin: 13px;
+	height: 300px;
+}
+
+#images div {
+	width: 30%;
+	overflow: hidden;
+}
+
+#images img {
+	width: 100%;
+}
+
+#images div:nth-of-type(2) {
+	border-radius: 100%;
+}
+
+#images div:nth-of-type(3) {
+	border-radius: 5%;
+}
